HOME-240 - Create settings page with API server URL

--- a/views/navigation.html
+++ b/views/navigation.html
@@ -1,7 +1,7 @@
 {{define "navigation"}}
 <header class="c-header c-header--default">
     <a class="c-header__logo" href="/">
-        HOME
+        SH-PANEL
     </a>
     <nav class="c-header__navigation">
         <ul class="c-navigation">
