--- a/views/register.html
+++ b/views/register.html
@@ -28,6 +28,17 @@
                        placeholder="Password"
                        name="password">
             </div>
+            <div class="c-input">
+                <label class="c-input__label"
+                       for="api-server-field">
+                    API Server IP
+                </label>
+                <input type="text"
+                       class="tst-api-server c-input__field"
+                       id="api-server-field"
+                       placeholder="API Server IP"
+                       name="api-server">
+            </div>
             <button type="submit" class="tst-register btn btn-default">
                 Register
             </button>
