HOME-288 - Add link styling

--- a/views/login.html
+++ b/views/login.html
@@ -40,7 +40,7 @@
                 Login
             </button>
             or
-            <a class="tst-signup login-box__signup"
+            <a class="tst-signup login-box__signup c-link"
                href="/login/register">
                 Sign up
             </a>
