--- a/views/register.html
+++ b/views/register.html
@@ -43,7 +43,7 @@
                 Register
             </button>
             or
-            <a class="tst-login btn btn-primary"
+            <a class="tst-login btn btn-primary c-link"
                href="/login">
                 Login
             </a>
