HOME-289 - Leverage graphen version

--- a/client/app.scss
+++ b/client/app.scss
@@ -1,3 +1,5 @@
+$icon-font-url: '~graphen/src/assets/font';
+
 @import "~graphen/src/style.scss";
 @import "components/Control/styles";
 @import "components/Icon/styles";
