HOME-193 - Introduce responsive layout for mobile devices

--- a/client/modules/AgentsStatus/List/Agents/Type1/_styles.scss
+++ b/client/modules/AgentsStatus/List/Agents/Type1/_styles.scss
@@ -1,6 +1,12 @@
 .agent-type1 {
   @extend %agents-list__item;
 
+  &__type {
+    @include gx-phone() {
+      display: none;
+    }
+  }
+
   &__link {
     @extend %agents-list__link;
   }
