--- a/views/navigation.html
+++ b/views/navigation.html
@@ -1,9 +1,9 @@
 {{define "navigation"}}
-<header class="c-header c-header--default">
-    <a class="c-header__logo c-link" href="/">
+<header class="shp-header">
+    <a class="shp-header__logo" href="/">
         SH-PANEL
     </a>
-    <nav class="c-header__navigation">
+    <nav class="shp-header__navigation">
         <ul class="c-navigation">
             <li class="c-navigation__option">
                 <a class="c-navigation__link c-link" href="/">
