--- a/client/app.scss
+++ b/client/app.scss
@@ -2,6 +2,7 @@ $c-icon-font-url: '~graphen/src/assets/font';
 
 @import "~graphen/src/style.scss";
 @import "components/Control/styles";
+@import "components/Header/styles";
 @import "modules/LoginBox/styles";
 @import "modules/AgentsStatus/styles";
 @import "modules/Dashboard/styles";
