--- a/client/modules/AlertPanel/_styles.scss
+++ b/client/modules/AlertPanel/_styles.scss
@@ -6,7 +6,18 @@
   &__alert {
     @extend .c-alert;
 
-    width: 350px;
+    @include gx-phone() {
+      width: 200px;
+    }
+
+    @include gx-tablet() {
+      width: 350px;
+    }
+
+    @include gx-desktop() {
+      width: 350px;
+    }
+
     margin-bottom: $spacing-small;
     opacity: 1;
     transition: opacity 2s;
