HOME-295 - Adopt v1.4.1 graphen

--- a/client/app.scss
+++ b/client/app.scss
@@ -1,4 +1,4 @@
-$c-icon-font-url: '~graphen/src/assets/font';
+$gc-icon-font-url: '~graphen/src/assets/font';
 
 @import "~graphen/src/style.scss";
 @import "components/Control/styles";
