--- a/client/components/Control/_styles.scss
+++ b/client/components/Control/_styles.scss
@@ -1,8 +1,8 @@
 .c-control {
   display: inline-block;
-  border: 1px solid $brand-component-outline-color;
+  border: 1px solid $gb-color-component-dark;
   padding: 2px 7px;
-  color: $brand-text-color;
+  color: $gb-color-text;
   font-size: 10px;
   text-transform: uppercase;
   margin-right: 20px;
