--- a/client/modules/AlertPanel/_styles.scss
+++ b/client/modules/AlertPanel/_styles.scss
@@ -4,7 +4,7 @@
   bottom: $spacing-large;
 
   &__alert {
-    @extend .c-alert;
+    @extend .gc-alert;
 
     @include gx-phone() {
       width: 200px;
@@ -31,11 +31,11 @@
     }
 
     &--info {
-      @extend .c-alert--success;
+      @extend .gc-alert--success;
     }
 
     &--error {
-      @extend .c-alert--danger;
+      @extend .gc-alert--danger;
     }
   }
 }
