--- a/views/view.html
+++ b/views/view.html
@@ -8,12 +8,12 @@
     </title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
-<body class="c-body">
+<body class="gc-body">
     {{template "navigation" .}}
     {{template "body" .}}
     <script src="/static/scripts.js"></script>
 </body>
-<footer class="c-footer c-footer--default">
+<footer class="gc-footer gc-footer--default">
     Version: {{.Version}}
 </footer>
 </html>
