--- a/client/modules/AgentsStatus/List/Agents/Type1/_styles.scss
+++ b/client/modules/AgentsStatus/List/Agents/Type1/_styles.scss
@@ -12,10 +12,10 @@
   }
 
   &--disabled {
-    color: $brand-component-outline-color;
+    color: $gb-color-component-dark;
 
     .agent-type1__link {
-      color: $brand-component-outline-color;
+      color: $gb-color-component-dark;
     }
   }
 
