--- a/client/modules/AgentsStatus/List/_styles.scss
+++ b/client/modules/AgentsStatus/List/_styles.scss
@@ -1,16 +1,16 @@
 .agents-list {
   &__list {
-    @extend .c-list;
+    @extend .gc-list;
   }
 }
 
 %agents-list {
   &__link {
-    color: $brand-text-color;
+    color: $gb-color-text;
   }
 
   &__item {
-    @extend .c-list__item;
+    @extend .gc-list__item;
   }
 }
 
