--- a/client/modules/Dashboard/Jeep/_styles.scss
+++ b/client/modules/Dashboard/Jeep/_styles.scss
@@ -3,8 +3,8 @@
   @extend .dashboard__cell--full;
 
   &__section {
-    @extend .c-panel;
-    @extend .c-panel--separator;
+    @extend .gc-panel;
+    @extend .gc-panel--separator;
 
     padding-bottom: 5px;
   }
