--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,8 +1,8 @@
 {{define "body"}}
-<div class="c-page">
+<div class="gc-page">
     <section>
         <article class="js-app">
-            <div class="c-loader"></div>
+            <div class="gc-loader"></div>
         </article>
     </section>
 </div>
