--- a/views/register.html
+++ b/views/register.html
@@ -1,40 +1,40 @@
 {{define "body"}}
-<main class="c-page">
+<main class="gc-page">
     <div class="login-box">
         <h2 class="login-box__title">
             Register new user
         </h2>
 
         <form action="/login/register" method="post">
-            <div class="c-input">
-                <label class="c-input__label"
+            <div class="gc-input">
+                <label class="gc-input__label"
                        for="email-field">
                     Email address
                 </label>
                 <input type="email"
-                       class="tst-email c-input__field"
+                       class="tst-email gc-input__field"
                        id="email-field"
                        placeholder="Email"
                        name="username">
             </div>
-            <div class="c-input">
-                <label class="c-input__label"
+            <div class="gc-input">
+                <label class="gc-input__label"
                        for="password-field">
                     Password
                 </label>
                 <input type="password"
-                       class="tst-password c-input__field"
+                       class="tst-password gc-input__field"
                        id="password-field"
                        placeholder="Password"
                        name="password">
             </div>
-            <div class="c-input">
-                <label class="c-input__label"
+            <div class="gc-input">
+                <label class="gc-input__label"
                        for="api-server-field">
                     API Server IP
                 </label>
                 <input type="text"
-                       class="tst-api-server c-input__field"
+                       class="tst-api-server gc-input__field"
                        id="api-server-field"
                        placeholder="API Server IP"
                        name="api-server">
@@ -43,7 +43,7 @@
                 Register
             </button>
             or
-            <a class="tst-login btn btn-primary c-link"
+            <a class="tst-login btn btn-primary gc-link"
                href="/login">
                 Login
             </a>
