HOME-295 - Adopt v1.4.1 graphen

--- a/views/register.html
+++ b/views/register.html
@@ -39,11 +39,11 @@
                        placeholder="API Server IP"
                        name="api-server">
             </div>
-            <button type="submit" class="tst-register btn btn-default">
+            <button type="submit" class="tst-register gc-btn gc-btn--default">
                 Register
             </button>
             or
-            <a class="tst-login btn btn-primary gc-link"
+            <a class="tst-login gc-link"
                href="/login">
                 Login
             </a>
