HOME-295 - Adopt v1.4.1 graphen

--- a/views/login.html
+++ b/views/login.html
@@ -34,17 +34,19 @@
                        placeholder="Password"
                        name="password">
             </div>
-            <button type="submit"
-                    class="tst-login login-box__submit"
-                    id="login-submit">
-                Login
-            </button>
-            or
-            <a class="tst-signup login-box__signup gc-link"
-               href="/login/register">
-                Sign up
-            </a>
-            (if you don't have an account yet)
+            <p>
+                <button type="submit"
+                        class="tst-login gc-btn gc-btn--default"
+                        id="login-submit">
+                    Login
+                </button>
+                or
+                <a class="tst-signup login-box__signup gc-link"
+                   href="/login/register">
+                    Sign up
+                </a>
+                (if you don't have an account yet)
+            </p>
         </form>
     </div>
 </main>
