--- a/views/login.html
+++ b/views/login.html
@@ -1,5 +1,5 @@
 {{define "body"}}
-<main class="c-page">
+<main class="gc-page">
     <div class="login-box">
         <h2 class="login-box__title">
             Login
@@ -12,39 +12,41 @@
         {{end}}
 
         <form action="/login" method="post">
-            <div class="c-input">
-                <label class="c-input__label"
+            <div class="gc-input">
+                <label class="gc-input__label"
                        for="email-field">
                     Email address
                 </label>
                 <input type="email"
-                       class="tst-email c-input__field"
+                       class="tst-email gc-input__field"
                        id="email-field"
                        placeholder="Email"
                        name="username">
             </div>
-            <div class="c-input">
-                <label class="c-input__label"
+            <div class="gc-input">
+                <label class="gc-input__label"
                        for="password-field">
                     Password
                 </label>
                 <input type="password"
-                       class="tst-password c-input__field"
+                       class="tst-password gc-input__field"
                        id="password-field"
                        placeholder="Password"
                        name="password">
             </div>
-            <button type="submit"
-                    class="tst-login login-box__submit"
-                    id="login-submit">
-                Login
-            </button>
-            or
-            <a class="tst-signup login-box__signup c-link"
-               href="/login/register">
-                Sign up
-            </a>
-            (if you don't have an account yet)
+            <p>
+                <button type="submit"
+                        class="tst-login gc-btn gc-btn--default"
+                        id="login-submit">
+                    Login
+                </button>
+                or
+                <a class="tst-signup login-box__signup gc-link"
+                   href="/login/register">
+                    Sign up
+                </a>
+                (if you don't have an account yet)
+            </p>
         </form>
     </div>
 </main>
