HOME-275 - Split admin space from dashboard

--- a/client/modules/Admin/_styles.scss
+++ b/client/modules/Admin/_styles.scss
@@ -1,15 +1,5 @@
-.admin {
-  @extend .gc-panel;
-  @extend .gc-panel--separator;
-
-  &__section {
-    @extend .gc-panel;
-    @extend .gc-panel--separator;
-
-    padding-bottom: 10px;
-  }
-
-  &__title {
-    @extend .gc-panel__title;
+.shp-admin {
+  &__card {
+    flex-grow: 1;
   }
 }
