--- a/views/navigation.html
+++ b/views/navigation.html
@@ -15,14 +15,14 @@
             {{end}}
             {{if .IsLogged}}
             <li class="gc-navigation__option">
-                <a class="gc-navigation__link gc-link" href="/">
+                <a class="tst-nav-dashboard gc-navigation__link gc-link" href="/">
                     Dashboard
                 </a>
             </li>
             {{end}}
             {{if and .IsLogged .IsAdmin}}
             <li class="gc-navigation__option">
-                <a class="gc-navigation__link gc-link" href="/admin">
+                <a class="tst-nav-admin gc-navigation__link gc-link" href="/admin">
                     Admin
                 </a>
             </li>
