--- a/views/navigation.html
+++ b/views/navigation.html
@@ -5,16 +5,25 @@
     </a>
     <nav class="shp-header__navigation">
         <ul class="gc-navigation">
-            <li class="gc-navigation__option">
-                <a class="gc-navigation__link gc-link" href="/">
-                    Dashboard
-                </a>
-            </li>
             {{if not .IsLogged}}
             <li class="gc-navigation__option"
                 role="presentation">
                 <a class="gc-navigation__link gc-link" href="/login">
                     Login
+                </a>
+            </li>
+            {{end}}
+            {{if .IsLogged}}
+            <li class="gc-navigation__option">
+                <a class="tst-nav-dashboard gc-navigation__link gc-link" href="/">
+                    Dashboard
+                </a>
+            </li>
+            {{end}}
+            {{if and .IsLogged .IsAdmin}}
+            <li class="gc-navigation__option">
+                <a class="tst-nav-admin gc-navigation__link gc-link" href="/admin">
+                    Admin
                 </a>
             </li>
             {{end}}
