HOME-314 - Adjust buttons styling to new graphen version

--- a/views/login.html
+++ b/views/login.html
@@ -36,7 +36,7 @@
             </div>
             <p>
                 <button type="submit"
-                        class="tst-login gc-btn gc-btn--default"
+                        class="tst-login gc-btn gc-btn--primary"
                         id="login-submit">
                     Login
                 </button>
