--- a/client/modules/AgentsStatus/List/Agents/Type2/_styles.scss
+++ b/client/modules/AgentsStatus/List/Agents/Type2/_styles.scss
@@ -15,7 +15,7 @@
 
   &__toggle {
     @extend .gc-btn;
-    @extend .gc-btn--success;
+    @extend .gc-btn--primary;
     @extend .gc-btn--small;
 
     margin-left: 10px;
