--- a/views/register.html
+++ b/views/register.html
@@ -40,7 +40,7 @@
                        name="api-server">
             </div>
             <p>
-                <button type="submit" class="tst-register gc-btn gc-btn--default">
+                <button type="submit" class="tst-register gc-btn gc-btn--primary">
                     Register
                 </button>
                 or
