--- a/views/navigation.html
+++ b/views/navigation.html
@@ -10,7 +10,7 @@
 {{define "nav-dashboard"}}
     <li {{if eq .Name "dashboard"}}class="gc-navigation__option gc-navigation__option--active"{{else}}class="gc-navigation__option"{{end}}
         role="presentation">
-        <a class="gc-navigation__link gc-link" href="/">
+        <a class="tst-nav-dashboard gc-navigation__link gc-link" href="/">
             Dashboard
         </a>
     </li>
@@ -19,7 +19,7 @@
 {{define "nav-admin"}}
     <li {{if eq .Name "admin"}}class="gc-navigation__option gc-navigation__option--active"{{else}}class="gc-navigation__option"{{end}}
         role="presentation">
-        <a class="gc-navigation__link gc-link" href="/admin">
+        <a class="tst-nav-admin gc-navigation__link gc-link" href="/admin">
             Admin
         </a>
     </li>
