HOME-324 - Update logo

--- a/client/app.scss
+++ b/client/app.scss
@@ -1,4 +1,5 @@
 $gc-icon-font-url: '~graphen/src/assets/font';
+$gc-font-url: '~graphen/src/assets/font';
 
 @import "~graphen/src/style.scss";
 @import "components/Control/styles";
