--- a/views/navigation.html
+++ b/views/navigation.html
@@ -28,7 +28,7 @@
 {{define "navigation"}}
 <header class="shp-header">
     <a class="shp-header__logo" href="/">
-        SH-PANEL
+        <span class="gc-logo">SHP_</span>
     </a>
     <nav class="shp-header__navigation">
         <ul class="gc-navigation">
