--- a/client/modules/AgentsStatus/List/_styles.scss
+++ b/client/modules/AgentsStatus/List/_styles.scss
@@ -14,7 +14,7 @@
   }
 }
 
-@import "./Agents/Jeep/styles";
-@import "./Agents/Type1/styles";
-@import "./Agents/Type2/styles";
-@import "./Agents/Unknown/styles";
+@import './Agents/Jeep/styles';
+@import './Agents/Type1/styles';
+@import './Agents/Type2/styles';
+@import './Agents/Unknown/styles';
