--- a/client/modules/Dashboard/_styles.scss
+++ b/client/modules/Dashboard/_styles.scss
@@ -32,7 +32,7 @@ $color-persimmon: #ff7157;
   }
 }
 
-@import "Jeep/styles";
-@import "TemperaturePanel/styles";
-@import "SoundPanel/styles";
-@import "CurrentPanel/styles";
+@import 'Jeep/styles';
+@import 'TemperaturePanel/styles';
+@import 'SoundPanel/styles';
+@import 'CurrentPanel/styles';
