HOME-264 - Refactor cleanups

--- a/views/login.html
+++ b/views/login.html
@@ -41,7 +41,7 @@
                     Login
                 </button>
                 or
-                <a class="tst-signup login-box__signup gc-link"
+                <a class="tst-signup login-box__signup gc-link gc-link--primary"
                    href="/login/register">
                     Sign up
                 </a>
