--- a/views/register.html
+++ b/views/register.html
@@ -44,7 +44,7 @@
                     Register
                 </button>
                 or
-                <a class="tst-login gc-link"
+                <a class="tst-login gc-link gc-link--primary"
                    href="/login">
                     Login
                 </a>
